--- a/pom.xml
+++ b/pom.xml
@@ -72,13 +72,13 @@
         <dependency>
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-solrj</artifactId>
-            <version>7.4.0-cdh6.3.2</version>
+            <version>8.11.2</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase-client</artifactId>
-            <version>2.1.0-cdh6.3.2</version>
+            <version>2.4.12</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
