--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.10</version>
+        <version>2.7.12</version>
         <relativePath/>
     </parent>
     <groupId>com.wayne</groupId>
@@ -19,10 +19,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <springdoc.version>1.7.0</springdoc.version>
-        <mybatis.version>2.3.0</mybatis.version>
-        <pagehelper.version>1.4.6</pagehelper.version>
+        <mybatis.version>2.3.1</mybatis.version>
+        <pagehelper.version>1.4.7</pagehelper.version>
         <solrj.version>8.11.2</solrj.version>
-        <hbase.version>2.4.16</hbase.version>
+        <hbase.version>2.4.17</hbase.version>
     </properties>
 
     <dependencies>
@@ -41,6 +41,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
         <dependency>
